# EduChain

./: .gitignore  README.md  pyproject.toml
app/: global_endpoints_assembly.py  main.py
app/api/: main.py  users.py
app/api/v1/: api.py
app/api/v1/endpoints/: login.py  user.py
app/auth/: router.py  service.py
app/constants/: user_registration_model_constants.py
app/core/: auth.py  get_role.py  security.py  user_checker.py
app/course/: models.py  router.py  schemas.py  service.py
app/database/: database.py
app/db/: database.py
app/enums/: user_enum.py
app/errors/: base_error.py  course_errors.py  credential_error.py  login_errors.py  user_errors.py
app/klass/: exceptions.py  models.py  router.py  schemas.py  service.py
app/models/: user_model.py  user_registration_model.py
app/schemas/: user_registration_schema.py  user_schema.py
app/user/: models.py  router.py  schemas.py  service.py
tests/: conftest.py  constants.py  test_create_user.py
tests/course/: test_create_course.py
tests/create_user/: test_create_user.py
tests/klass/: test_klass.py
tests/user/: test_create_user.py  test_user.py
